--- a/mvc.csproj
+++ b/mvc.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-    <PackageReference Include="TriLog" Version="7.8.5" />
+    <PackageReference Include="SharpCompress" Version="0.28.3" />
+    <PackageReference Include="TriLog" Version="7.8.7" />
 </ItemGroup>
 
 </Project>
